feat: 검색바의 목적지 영역에 Google Place 적용

--- a/src/components/ListContainer/ListContainer.module.css
+++ b/src/components/ListContainer/ListContainer.module.css
@@ -3,6 +3,13 @@
   grid-template-columns: repeat(var(--columns, 3), 1fr);
   gap: var(--gap, 24px);
   width: 100%;
+  align-items: start;
+}
+
+.container > * {
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
 }
 
 @media (max-width: 1200px) {
