--- a/src/pages/Wishlist/Wishlist.module.css
+++ b/src/pages/Wishlist/Wishlist.module.css
@@ -126,6 +126,22 @@
   background-color: #f7f7f7;
   overflow: hidden;
   border-radius: 12px;
+  flex-shrink: 0;
+}
+
+.recentlyViewedGrid .wishlistCardImage {
+  height: 0;
+  padding-bottom: 100%;
+  aspect-ratio: unset;
+}
+
+.recentlyViewedGrid .wishlistCardImage img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .wishlistDeleteButton {
