--- a/src/components/ListContainer/ListContainer.module.css
+++ b/src/components/ListContainer/ListContainer.module.css
@@ -21,6 +21,8 @@
 @media (max-width: 768px) {
   .container {
     grid-template-columns: repeat(1, 1fr);
+    max-width: 100%;
+    overflow: hidden;
   }
 }
 
